<resources>
    <string name="app_name">MyRunsTa</string>
    <string name="capture_image">Capture Image</string>
    <string name="select_from_gallery">Select From Gallery</string>

    <!--    name hint and label-->
    <string name="name_hint">Your Name</string>
    <string name="name_label">Name</string>

    <!--    email hint and label-->
    <string name="email_hint">Your Email</string>
    <string name="email_label">Email</string>

    <!--    number hint and label-->
    <string name="number_hint">Your Phone Number</string>
    <string name="number_label">Phone</string>

    <!--    gender hint and label-->
    <string name="gender_hint">Gender</string>
    <string name="gender_label">Gender</string>

    <!--    class year hint and label-->
    <string name="class_year_hint">eg. 2023</string>
    <string name="class_year_label">Class</string>

    <!--    major hint and label-->
    <string name="majorHint">Your Major</string>
    <string name="majorLabel">Major</string>

    <!--    gender options-->
    <string name="male_gender">Male</string>
    <string name="female_gender">Female</string>

    <!--    defining sample menu item-->
    <string name="settings">Settings</string>

    <!-- image view-->
    <string name="profile_pic_label">Profile Photo</string>
    <string name="change_image">CHANGE</string>
    <string name="image_des">profile image</string>

    <!-- common labels -->
    <string name="empty" />
    <string name="save">SAVE</string>
    <string name="delete">DELETE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- settings labels   -->
    <string name="account_preferences">Account Preferences</string>
    <string name="user_profile_label">Name, Email, Class, etc.</string>
    <string name="user_profile_hint">User Profile</string>
    <string name="privacy_setting_label">Privacy Setting</string>
    <string name="privacy_setting_hint">Post your records anonymously</string>
    <string name="additional_settings">Additional Settings</string>
    <string name="unit_preferences_label">Unit Preference</string>
    <string name="unit_preferences_hint">Select the Unit</string>
    <string name="comments_label">Comments</string>
    <string name="comments_hint">Please enter you comments</string>
    <string name="misc">Misc</string>
    <string name="webpage_label">Webpage</string>
    <string name="webpage_link">https://www.cs.dartmouth.edu</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="unit_preference_dialog">Unit Preferences</string>
    <string name="metric_btn_label">Metric (Kilometers)</string>
    <string name="imperial_btn_label">Imperial (Miles)</string>
    <string name="title_activity_manual_input">ManualInputActivity</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!--  start labels  -->
    <string name="input_type">Input Type</string>
    <string name="activity_type">Activity Type</string>
    <string name="start">Start</string>
    <string name="start_sync_button">Sync</string>

    <!--  tabs  -->
    <string name="history">History</string>
</resources>