<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollable"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/inside_layout"
            >
            <GridLayout
                android:layout_width="fill_parent"
                android:layout_height="180dp"
                >
                <TextView
                    android:layout_row="1"
                    android:text="@string/profile_pic_label"
                    android:textColor="@color/textLabelColor"
                    />
                <ImageView
                    android:layout_width="140dp"
                    android:layout_height="180dp"
                    android:layout_row="2"
                    android:layout_gravity="center_horizontal"
                    android:src="@mipmap/ic_default_profile_image"
                    android:id="@+id/profile_image"
                    android:contentDescription="@string/image_des"
                    android:layout_marginEnd="20dp"
                    />
                <Button
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_row="2"
                    android:layout_gravity="center_vertical"
                    android:text="@string/change_image"
                    android:onClick="changeImage"
                    android:layout_marginEnd="20dp"
                    tools:ignore="UsingOnClickInXml" />
            </GridLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:text="@string/name_label"
                    android:layout_marginStart="2dp"
                    android:textColor="@color/textLabelColor"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:id="@+id/name"
                    android:autofillHints="@string/name_hint"
                    android:inputType="text"
                    android:hint="@string/name_hint"
                    android:textColor="@color/textColor"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:text="@string/email_label"
                    android:id="@+id/emailId"
                    android:layout_marginStart="2dp"
                    android:textColor="@color/textLabelColor"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:id="@+id/email"
                    android:autofillHints="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email_hint"
                    android:textColor="@color/textColor"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:text="@string/number_label"
                    android:layout_marginStart="2dp"
                    android:textColor="@color/textLabelColor"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:id="@+id/phone"
                    android:autofillHints="@string/number_hint"
                    android:inputType="phone"
                    android:hint="@string/number_hint"
                    android:textColor="@color/textColor"
                    android:maxLength="10"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:text="@string/gender_label"
                    android:layout_marginStart="2dp"
                    android:textColor="@color/textLabelColor"
                    />
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:weightSum="2"
                    android:id="@+id/gender"
                    android:orientation="horizontal"
                    >
                    <RadioButton
                        android:layout_width="0dp"
                        android:layout_height="20dp"
                        android:layout_weight="1"
                        android:id="@+id/maleGender"
                        android:text="@string/male_gender"
                        />

                    <RadioButton
                        android:layout_width="0dp"
                        android:layout_height="20dp"
                        android:layout_weight="1"
                        android:id="@+id/femaleGender"
                        android:text="@string/female_gender"
                        />
                </RadioGroup>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:text="@string/class_year_label"
                    android:layout_marginStart="2dp"
                    android:textColor="@color/textLabelColor"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:id="@+id/my_class"
                    android:autofillHints="@string/class_year_hint"
                    android:inputType="number"
                    android:hint="@string/class_year_hint"
                    android:textColor="@color/textColor"
                    android:maxLength="4"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:text="@string/majorLabel"
                    android:layout_marginStart="2dp"
                    android:textColor="@color/textLabelColor"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:id="@+id/major"
                    android:autofillHints="@string/majorHint"
                    android:inputType="text"
                    android:hint="@string/majorHint"
                    android:textColor="@color/textColor"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:weightSum="2"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                >
                <Button
                    android:id="@+id/profile_save"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="0.9"
                    android:text="@string/save"
                    style=""
                    android:onClick="profileSave"
                    tools:ignore="RtlSymmetry,UsingOnClickInXml" />
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="0.11"
                    tools:ignore="UselessLeaf" />
                <Button
                    android:id="@+id/profile_cancel"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="0.9"
                    android:text="@android:string/cancel"
                    style=""
                    android:onClick="profileCancel"
                    tools:ignore="ButtonOrder,RtlSymmetry,UsingOnClickInXml" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>