<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="350dp"
    android:layout_height="250dp"
    android:layout_gravity="center">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unit_preference_dialog"
        android:textSize="20sp"
        android:textColor="@color/textColor"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textStyle="bold"/>
    <RadioGroup
        android:id="@+id/unit_types"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp">
        <RadioButton
            android:id="@+id/metric_option"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:text="@string/metric_btn_label"
            android:textSize="17.25sp"/>
        <RadioButton
            android:id="@+id/imperial_option"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:text="@string/imperial_btn_label"
            android:textSize="17.25sp"/>
    </RadioGroup>
    <TextView
        android:id="@+id/unit_dialog_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@android:string/cancel"
        android:textColor="@color/colorAccent"
        android:textSize="15sp"
        android:layout_gravity="end"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground"/>

</LinearLayout>